[gd_scene load_steps=4 format=3 uid="uid://djoroyuhin570"]

[ext_resource type="Script" uid="uid://b4giugoepobrn" path="res://scripts/hud.gd" id="1_ahhtf"]
[ext_resource type="Texture2D" uid="uid://bo5jyyqj4sg3" path="res://resources/spritesheet.png" id="2_oo0fn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oo0fn"]
atlas = ExtResource("2_oo0fn")
region = Rect2(32, 0, 16, 16)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahhtf")

[node name="Crosshair" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Vertical" type="ColorRect" parent="Crosshair"]
custom_minimum_size = Vector2(4, 16)
layout_mode = 2

[node name="Horizontal" type="ColorRect" parent="Crosshair"]
custom_minimum_size = Vector2(16, 4)
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
offset_left = 2.0
offset_right = 3.0
offset_bottom = 84.0
theme_override_constants/separation = 0

[node name="FPS" type="Label" parent="Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10

[node name="Process" type="Label" parent="Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10

[node name="PhysicsProcess" type="Label" parent="Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10

[node name="StaticMemoryUsed" type="Label" parent="Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10

[node name="VideoMemoryUsed" type="Label" parent="Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10

[node name="DrawCalls" type="Label" parent="Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10

[node name="Primitives" type="Label" parent="Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10

[node name="Block" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 100.0
grow_vertical = 0

[node name="Texture" type="TextureRect" parent="Block"]
texture_filter = 1
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = SubResource("AtlasTexture_oo0fn")
